tests/fixtures/invalid/pow_str_set_bytes.py
# Cannot call pow() with Str, Set[int], Bytes
x = pow("hello", {1, 2, 3}, b"hello")
